# annoy

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  README_GO.rst  README_Lua.md  RELEASE.md  annoy-dev-1.rockspec  appveyor.yml  setup.cfg  setup.py  setup_help.py  tox.ini
.github/workflows/: ci.yml
annoy/: __init__.py  __init__.pyi
debian/: changelog  control
examples/: CMakeLists.txt  mmap_test.py  packed_index_test.cpp  precision_test  precision_test.cpp  precision_test.py  s_compile_cpp.sh  simple_test.py
protobuf/: annoy.proto
src/: annoygomodule.h  annoygomodule.i  annoylib.cc  annoylib.h  annoyluamodule.cc  annoymodule.cc  datamapper.h  kissrandom.h  lmdbforest.h  mman.h  packedlib.h  packutils.h
src/protobuf/: annoy.pb.cc  annoy.pb.h
test/: _accuracy_test.py  _annoy_test.py  accuracy_test.py  angular_index_test.py  annoy_test.go  annoy_test.lua  annoy_test.py  common.py  dot_index_test.py  euclidean_index_test.py  examples_test.py  hamming_index_test.py  holes_test.py  index_test.py  manhattan_index_test.py  memory_leak_test.py  multithreaded_build_test.py  on_disk_build.py  on_disk_build_test.py  seed_test.py  serialize_test.py  test.py  test.tree  threading_test.py  types_test.py
